Fixed some links, removed target="blank" from dhpr

--- a/APIDocumentation/cta-dataset-en.html
+++ b/APIDocumentation/cta-dataset-en.html
@@ -399,7 +399,7 @@
                                     <!-- Snippet package/snippets/resource_item.html start -->
                                     <!--Product Begins-->
                                     <tr>
-                                        <td>Product Marque</td>
+                                        <td>Product Brand</td>
                                         <td>Dataset</td>
                                         <td>JSON</td>
                                         <td>English</td>
@@ -407,7 +407,7 @@
                                     </tr>
 
                                     <tr>
-                                        <td>Product Marque</td>
+                                        <td>Product Brand</td>
                                         <td>Dataset</td>
                                         <td>XML</td>
                                         <td>English</td>
@@ -415,7 +415,7 @@
                                        <!-- <td><a id="productbrandEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/cta/api/productbrand/?lang=en&type=xml', 'productbrandEN')">Access</a></td>-->
                                     </tr>
                                     <tr>
-                                        <td>Brand</td>
+                                        <td>Product Brand</td>
                                         <td>Dataset</td>
                                         <td>CSV</td>
                                         <td>English</td>
