--- a/APIDocumentation/dpd-dataset-fr.html
+++ b/APIDocumentation/dpd-dataset-fr.html
@@ -293,7 +293,8 @@
                                         <td>
                                             <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/dpd/api/activeingredient/?lang=fr&type=xml" target="_blank" title="Resource 1">Accès</a>
                                         </td>
-                                        <!--<td><a id="activeIngredientEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/dpd/api/activeingredient/?lang=fr&type=xml', 'activeIngredientEN')">Accès</a></td>-->
+                                        <!--<td><a id="activeIngredientEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/dpd/api/activeingredient/?
+                                            &type=xml', 'activeIngredientEN')">Accès</a></td>-->
                                     </tr><!-- Snippet package/snippets/resource_item.html end -->
                                     <!-- Snippet package/snippets/resource_item.html start -->
 
