Fixed more target="_blank" (cta)

--- a/APIDocumentation/cta-dataset-en.html
+++ b/APIDocumentation/cta-dataset-en.html
@@ -345,7 +345,7 @@
                                         <td>Dataset</td>
                                         <td>JSON</td>
                                         <td>English</td>
-                                        <td><a href="https://api.hres.ca/cta/api/manufacturer/?lang=en&type=json" title="Resource 1" class="resource-url-analytics btn btn-primary" target="_blank">Access</a></td>
+                                        <td><a href="https://api.hres.ca/cta/api/manufacturer/?lang=en&type=json" title="Resource 1" class="resource-url-analytics btn btn-primary"  >Access</a></td>
                                     </tr>
 
                                     <tr>
@@ -353,7 +353,7 @@
                                         <td>Dataset</td>
                                         <td>XML</td>
                                         <td>English</td>
-                                        <td><a href="https://api.hres.ca/cta/api/manufacturer/?lang=en&type=xml" title="Resource 1" class="resource-url-analytics btn btn-primary" target="_blank">Access</a></td>
+                                        <td><a href="https://api.hres.ca/cta/api/manufacturer/?lang=en&type=xml" title="Resource 1" class="resource-url-analytics btn btn-primary"  >Access</a></td>
                                         <!--<td><a id="manufacturerEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/cta/api/manufacturer/?lang=en&type=xml', 'manufacturerEN')">Access</a></td>-->
                                     </tr>
 
@@ -374,7 +374,7 @@
                                         <td>Dataset</td>
                                         <td>JSON</td>
                                         <td>English</td>
-                                        <td><a href="https://api.hres.ca/cta/api/medicalcondition/?lang=en&type=json" title="Resource 1" class="resource-url-analytics btn btn-primary" target="_blank">Access</a></td>
+                                        <td><a href="https://api.hres.ca/cta/api/medicalcondition/?lang=en&type=json" title="Resource 1" class="resource-url-analytics btn btn-primary"  >Access</a></td>
                                     </tr>
 
                                     <tr>
@@ -382,7 +382,7 @@
                                         <td>Dataset</td>
                                         <td>XML</td>
                                         <td>English</td>
-                                        <td><a href="https://api.hres.ca/cta/api/medicalcondition/?lang=en&type=xml" title="Resource 1" class="resource-url-analytics btn btn-primary" target="_blank">Access</a></td>
+                                        <td><a href="https://api.hres.ca/cta/api/medicalcondition/?lang=en&type=xml" title="Resource 1" class="resource-url-analytics btn btn-primary"  >Access</a></td>
                                         <!--<td><a id="medicalconditionEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/cta/api/medicalcondition/?lang=en&type=xml', 'medicalconditionEN')">Access</a></td>-->
                                     </tr>
 
@@ -403,7 +403,7 @@
                                         <td>Dataset</td>
                                         <td>JSON</td>
                                         <td>English</td>
-                                        <td><a href="https://api.hres.ca/cta/api/productbrand/?lang=en&type=json" title="Resource 1" class="resource-url-analytics btn btn-primary" target="_blank">Access</a></td>
+                                        <td><a href="https://api.hres.ca/cta/api/productbrand/?lang=en&type=json" title="Resource 1" class="resource-url-analytics btn btn-primary"  >Access</a></td>
                                     </tr>
 
                                     <tr>
@@ -411,7 +411,7 @@
                                         <td>Dataset</td>
                                         <td>XML</td>
                                         <td>English</td>
-                                        <td><a href="https://api.hres.ca/cta/api/productbrand/?lang=en&type=xml" title="Resource 1" class="resource-url-analytics btn btn-primary" target="_blank">Access</a></td>
+                                        <td><a href="https://api.hres.ca/cta/api/productbrand/?lang=en&type=xml" title="Resource 1" class="resource-url-analytics btn btn-primary"  >Access</a></td>
                                        <!-- <td><a id="productbrandEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/cta/api/productbrand/?lang=en&type=xml', 'productbrandEN')">Access</a></td>-->
                                     </tr>
                                     <tr>
@@ -430,7 +430,7 @@
                                         <td>Dataset</td>
                                         <td>JSON</td>
                                         <td>English</td>
-                                        <td><a href="https://api.hres.ca/cta/api/protocol/?lang=en&type=json" title="Resource 1" class="resource-url-analytics btn btn-primary" target="_blank">Access</a></td>
+                                        <td><a href="https://api.hres.ca/cta/api/protocol/?lang=en&type=json" title="Resource 1" class="resource-url-analytics btn btn-primary"  >Access</a></td>
                                     </tr>
 
                                     <tr>
@@ -438,7 +438,7 @@
                                         <td>Dataset</td>
                                         <td>XML</td>
                                         <td>English</td>
-                                        <td><a href="https://api.hres.ca/cta/api/protocol/?lang=en&type=xml" title="Resource 1" class="resource-url-analytics btn btn-primary" target="_blank">Access</a></td>
+                                        <td><a href="https://api.hres.ca/cta/api/protocol/?lang=en&type=xml" title="Resource 1" class="resource-url-analytics btn btn-primary"  >Access</a></td>
                                         <!--<td><a id="protocolEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/cta/api/protocol/?lang=en&type=xml', 'protocolEN')">Access</a></td>-->
                                     </tr>
 
@@ -459,7 +459,7 @@
                                         <td>Dataset</td>
                                         <td>JSON</td>
                                         <td>English</td>
-                                        <td><a href="https://api.hres.ca/cta/api/status/?lang=en&type=json" title="Resource 1" class="resource-url-analytics btn btn-primary" target="_blank">Access</a></td>
+                                        <td><a href="https://api.hres.ca/cta/api/status/?lang=en&type=json" title="Resource 1" class="resource-url-analytics btn btn-primary"  >Access</a></td>
                                     </tr>
 
                                     <tr>
@@ -467,7 +467,7 @@
                                         <td>Dataset</td>
                                         <td>XML</td>
                                         <td>English</td>
-                                        <td><a href="https://api.hres.ca/cta/api/status/?lang=en&type=xml" title="Resource 1" class="resource-url-analytics btn btn-primary" target="_blank">Access</a></td>
+                                        <td><a href="https://api.hres.ca/cta/api/status/?lang=en&type=xml" title="Resource 1" class="resource-url-analytics btn btn-primary"  >Access</a></td>
                                        <!-- <td><a id="statusEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/cta/api/status/?lang=en&type=xml', 'statusEN')">Access</a></td>-->
                                     </tr>
 
@@ -488,7 +488,7 @@
                                         <td>Dataset</td>
                                         <td>JSON</td>
                                         <td>English</td>
-                                        <td><a href="https://api.hres.ca/cta/api/studypopulation/?lang=en&type=json" title="Resource 1" class="resource-url-analytics btn btn-primary" target="_blank">Access</a></td>
+                                        <td><a href="https://api.hres.ca/cta/api/studypopulation/?lang=en&type=json" title="Resource 1" class="resource-url-analytics btn btn-primary"  >Access</a></td>
                                     </tr>
 
                                     <tr>
@@ -496,7 +496,7 @@
                                         <td>Dataset</td>
                                         <td>XML</td>
                                         <td>English</td>
-                                        <td><a href="https://api.hres.ca/cta/api/studypopulation/?lang=en&type=xml" title="Resource 1" class="resource-url-analytics btn btn-primary" target="_blank">Access</a></td>
+                                        <td><a href="https://api.hres.ca/cta/api/studypopulation/?lang=en&type=xml" title="Resource 1" class="resource-url-analytics btn btn-primary"  >Access</a></td>
                                         <!--<td><a id="studypopulationEN" href="#" title="Resource 1" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/cta/api/studypopulation/?lang=en&type=xml', 'studypopulationEN')">Access</a></td>-->
                                     </tr>
 
@@ -517,7 +517,7 @@
                                         <td>Guide</td>
                                         <td>HTML</td>
                                         <td>English</td>
-                                        <td><a href="http://api.hres.ca/documentation/cta-documentation-en.html" title="Resource 3" class="resource-url-analytics btn btn-primary" target="_blank">Access</a></td>
+                                        <td><a href="http://api.hres.ca/documentation/cta-documentation-en.html" title="Resource 3" class="resource-url-analytics btn btn-primary"  >Access</a></td>
                                     </tr>
 
                                     <!--Link to Documentation Ends-->
