--- a/APIDocumentation/cta-dataset-fr.html
+++ b/APIDocumentation/cta-dataset-fr.html
@@ -343,7 +343,7 @@
                                             <td>Dataset</td>
                                             <td>JSON</td>
                                             <td>French</td>
-                                            <td><a href="https://api.hres.ca/cta/api/manufacturer/?lang=fr&type=json" title="Resource 2" class="resource-url-analytics btn btn-primary" target="_blank">Accès</a></td>
+                                            <td><a href="https://api.hres.ca/cta/api/manufacturer/?lang=fr&type=json" title="Resource 2" class="resource-url-analytics btn btn-primary"  >Accès</a></td>
                                         </tr>
 
                                         <tr>
@@ -351,7 +351,7 @@
                                             <td>Dataset</td>
                                             <td>XML</td>
                                             <td>French</td>
-                                            <td><a href="https://api.hres.ca/cta/api/manufacturer/?lang=fr&type=xml" title="Resource 2" class="resource-url-analytics btn btn-primary" target="_blank">Accès</a></td>
+                                            <td><a href="https://api.hres.ca/cta/api/manufacturer/?lang=fr&type=xml" title="Resource 2" class="resource-url-analytics btn btn-primary"  >Accès</a></td>
                                             <!--<td><a id="manufacturerFR" href="#" title="Resource 2" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/cta/api/manufacturer/?lang=fr&type=xml', 'manufacturerFR')">Accès</a></td>-->
                                         </tr>
                                         <tr>
@@ -372,7 +372,7 @@
                                             <td>Dataset</td>
                                             <td>JSON</td>
                                             <td>French</td>
-                                            <td><a href="https://api.hres.ca/cta/api/medicalcondition/?lang=fr&type=json" title="Resource 2" class="resource-url-analytics btn btn-primary" target="_blank">Accès</a></td>
+                                            <td><a href="https://api.hres.ca/cta/api/medicalcondition/?lang=fr&type=json" title="Resource 2" class="resource-url-analytics btn btn-primary"  >Accès</a></td>
                                         </tr>
 
                                         <tr>
@@ -380,7 +380,7 @@
                                             <td>Dataset</td>
                                             <td>XML</td>
                                             <td>French</td>
-                                            <td><a href="https://api.hres.ca/cta/api/medicalcondition/?lang=fr&type=xml" title="Resource 2" class="resource-url-analytics btn btn-primary" target="_blank">Accès</a></td>
+                                            <td><a href="https://api.hres.ca/cta/api/medicalcondition/?lang=fr&type=xml" title="Resource 2" class="resource-url-analytics btn btn-primary"  >Accès</a></td>
                                             <!--<td><a id="medicalconditionFR" href="#" title="Resource 2" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/cta/api/medicalcondition/?lang=fr&type=xml', 'medicalconditionFR')">Accès</a></td>-->
                                         </tr>
 
@@ -402,7 +402,7 @@
                                             <td>Dataset</td>
                                             <td>JSON</td>
                                             <td>French</td>
-                                            <td><a href="https://api.hres.ca/cta/api/productbrand/?lang=fr&type=json" title="Resource 2" class="resource-url-analytics btn btn-primary" target="_blank">Accès</a></td>
+                                            <td><a href="https://api.hres.ca/cta/api/productbrand/?lang=fr&type=json" title="Resource 2" class="resource-url-analytics btn btn-primary"  >Accès</a></td>
                                         </tr>
 
                                         <tr>
@@ -410,7 +410,7 @@
                                             <td>Dataset</td>
                                             <td>XML</td>
                                             <td>French</td>
-                                            <td><a href="https://api.hres.ca/cta/api/productbrand/?lang=fr&type=xml" title="Resource 2" class="resource-url-analytics btn btn-primary" target="_blank">Accès</a></td>
+                                            <td><a href="https://api.hres.ca/cta/api/productbrand/?lang=fr&type=xml" title="Resource 2" class="resource-url-analytics btn btn-primary"  >Accès</a></td>
                                             <!--<td><a id="productbrandFR" href="#" title="Resource 2" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/cta/api/productbrand/?lang=fr&type=xml', 'productbrandFR')">Accès</a></td>-->
                                         </tr>
 
@@ -432,7 +432,7 @@
                                             <td>Dataset</td>
                                             <td>JSON</td>
                                             <td>French</td>
-                                            <td><a href="https://api.hres.ca/cta/api/protocol/?lang=fr&type=json" title="Resource 2" class="resource-url-analytics btn btn-primary" target="_blank">Accès</a></td>
+                                            <td><a href="https://api.hres.ca/cta/api/protocol/?lang=fr&type=json" title="Resource 2" class="resource-url-analytics btn btn-primary"  >Accès</a></td>
                                         </tr>
 
                                         <tr>
@@ -440,7 +440,7 @@
                                             <td>Dataset</td>
                                             <td>XML</td>
                                             <td>French</td>
-                                            <td><a href="https://api.hres.ca/cta/api/protocol/?lang=fr&type=xml" title="Resource 2" class="resource-url-analytics btn btn-primary" target="_blank">Accès</a></td>
+                                            <td><a href="https://api.hres.ca/cta/api/protocol/?lang=fr&type=xml" title="Resource 2" class="resource-url-analytics btn btn-primary"  >Accès</a></td>
                                             <!--<td><a id="protocolFR" href="#" title="Resource 2" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/cta/api/protocol/?lang=fr&type=xml', 'protocolFR')">Accès</a></td>-->
                                         </tr>
 
@@ -461,7 +461,7 @@
                                             <td>Dataset</td>
                                             <td>JSON</td>
                                             <td>French</td>
-                                            <td><a href="https://api.hres.ca/cta/api/status/?lang=fr&type=json" title="Resource 2" class="resource-url-analytics btn btn-primary" target="_blank">Accès</a></td>
+                                            <td><a href="https://api.hres.ca/cta/api/status/?lang=fr&type=json" title="Resource 2" class="resource-url-analytics btn btn-primary"  >Accès</a></td>
                                         </tr>
 
                                         <tr>
@@ -469,7 +469,7 @@
                                             <td>Dataset</td>
                                             <td>XML</td>
                                             <td>French</td>
-                                            <td><a href="https://api.hres.ca/cta/api/status/?lang=fr&type=xml" title="Resource 2" class="resource-url-analytics btn btn-primary" target="_blank">Accès</a></td>
+                                            <td><a href="https://api.hres.ca/cta/api/status/?lang=fr&type=xml" title="Resource 2" class="resource-url-analytics btn btn-primary"  >Accès</a></td>
                                             <!--<td><a id="statusFR" href="#" title="Resource 2" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/cta/api/status/?lang=fr&type=xml', 'statusFR')">Accès</a></td>-->
                                         </tr>
                                         <tr>
@@ -490,7 +490,7 @@
                                             <td>Dataset</td>
                                             <td>JSON</td>
                                             <td>French</td>
-                                            <td><a href="https://api.hres.ca/cta/api/studypopulation/?lang=fr&type=json" title="Resource 2" class="resource-url-analytics btn btn-primary" target="_blank">Accès</a></td>
+                                            <td><a href="https://api.hres.ca/cta/api/studypopulation/?lang=fr&type=json" title="Resource 2" class="resource-url-analytics btn btn-primary"  >Accès</a></td>
                                         </tr>
 
                                         <tr>
@@ -498,7 +498,7 @@
                                             <td>Dataset</td>
                                             <td>XML</td>
                                             <td>French</td>
-                                            <td><a href="https://api.hres.ca/cta/api/studypopulation/?lang=fr&type=xml" title="Resource 2" class="resource-url-analytics btn btn-primary" target="_blank">Accès</a></td>
+                                            <td><a href="https://api.hres.ca/cta/api/studypopulation/?lang=fr&type=xml" title="Resource 2" class="resource-url-analytics btn btn-primary"  >Accès</a></td>
                                             <!--<td><a id="studypopulationFR" href="#" title="Resource 2" class="resource-url-analytics btn btn-primary" onclick="saveXML('https://api.hres.ca/cta/api/studypopulation/?lang=fr&type=xml', 'studypopulationFR')">Accès</a></td>-->
                                         </tr>
 
@@ -520,7 +520,7 @@
                                             <td>Guide</td>
                                             <td>HTML</td>
                                             <td>French</td>
-                                            <td><a href="http://api.hres.ca/documentation/cta-documentation-fr.html" title="Resource 4" class="resource-url-analytics btn btn-primary" target="_blank">Accès</a></td>
+                                            <td><a href="http://api.hres.ca/documentation/cta-documentation-fr.html" title="Resource 4" class="resource-url-analytics btn btn-primary"  >Accès</a></td>
                                         </tr>
                                         <!--Link to Documentation Ends-->
                                         <!-- Snippet package/snippets/resource_item.html end -->
