Removed status="" parameter from CSV Controller... wasn't necessary

--- a/APIDocumentation/dpd-dataset-fr.html
+++ b/APIDocumentation/dpd-dataset-fr.html
@@ -392,7 +392,7 @@
                                         <td>Dataset</td>
                                         <td>CSV</td>
                                         <td>Français</td>
-                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/dpd/api/CSV/DownloadCSV?dataType=drugProduct&status=1&lang=fr" title="Resource 2">Accès</a>
+                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/dpd/api/CSV/DownloadCSV?dataType=drugProduct&lang=fr" title="Resource 2">Accès</a>
                                     </tr>
 
                                     <tr>
@@ -421,7 +421,7 @@
                                         <td>Dataset</td>
                                         <td>CSV</td>
                                         <td>Français</td>
-                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/dpd/api/CSV/DownloadCSV?dataType=drugProduct&status=2&lang=fr" title="Resource 2">Accès</a>
+                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/dpd/api/CSV/DownloadCSV?dataType=drugProduct&lang=fr" title="Resource 2">Accès</a>
 </tr>
 
                                     <tr>
@@ -450,7 +450,7 @@
                                         <td>Dataset</td>
                                         <td>CSV</td>
                                         <td>Français</td>
-                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/dpd/api/CSV/DownloadCSV?dataType=drugProduct&status=3&lang=fr" title="Resource 2">Accès</a>
+                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/dpd/api/CSV/DownloadCSV?dataType=drugProduct&lang=fr" title="Resource 2">Accès</a>
 </tr>
 
                                     <tr>
@@ -479,7 +479,7 @@
                                         <td>Dataset</td>
                                         <td>CSV</td>
                                         <td>Français</td>
-                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/dpd/api/CSV/DownloadCSV?dataType=drugProduct&status=4&lang=fr" title="Resource 2">Accès</a>
+                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/dpd/api/CSV/DownloadCSV?dataType=drugProduct&lang=fr" title="Resource 2">Accès</a>
 </tr>
 
                                     <tr>
@@ -498,7 +498,7 @@
                                         <td>XML</td>
                                         <td>Français</td>
                                         <td>
-                                            <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/dpd/api/drugproduct/?status=6&lang=fr&type=xml"   title="Resource 2">Accès</a>
+                                            <a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/dpd/api/drugproduct/?status=5&lang=fr&type=xml"   title="Resource 2">Accès</a>
                                             <!--<a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/dpd/api/drugproduct/?status=5&lang=fr&type=xml"   title="Resource 2">Accès</a>-->
                                         </td>
                                     </tr>
@@ -508,8 +508,8 @@
                                         <td>Dataset</td>
                                         <td>CSV</td>
                                         <td>Français</td>
-                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/dpd/api/CSV/DownloadCSV?dataType=drugProduct&status=5&lang=fr" title="Resource 2">Accès</a>
-</tr>
+                                        <td><a class="resource-url-analytics btn btn-primary" href="https://api.hres.ca/dpd/api/CSV/DownloadCSV?dataType=drugProduct&lang=fr" title="Resource 2">Accès</a>
+                                    </tr>
 
                                     <!-- Snippet package/snippets/resource_item.html end -->
                                     <!-- Snippet package/snippets/resource_item.html start -->
