Documentation pages updated by Jocelyne

--- a/APIDocumentation/api-fr.html
+++ b/APIDocumentation/api-fr.html
@@ -13,12 +13,12 @@
     <meta name="dcterms.title" content="API" />
     <meta name="description" content="Menu pour les API." />
     <meta name="dcterms.subject" title="scheme" content="" />
-    <meta name="dcterms.creator" content="Government of Canada, Health Canada and the Public health Agency of Canada" />
+    <meta name="dcterms.creator" content="Gouvernement du Canada, Santé Canada et l'Agence de la santé publique du Canada" />
     <meta name="dcterms.contributor" content="" />
     <meta name="dcterms.type" title="gctype" content="" />
     <meta name="dcterms.audience" title="gcaudience" content="public" />
-    <meta name="dcterms.issued" title="W3CDTF" content="2017-06-27" />
-    <meta name="dcterms.modified" title="W3CDTF" content="2018-06-27" />
+    <meta name="dcterms.issued" title="W3CDTF" content="2017-11-30" />
+    <meta name="dcterms.modified" title="W3CDTF" content="2017-11-30" />
     <meta name="review_date" content="" />
     <meta name="meta_date" content="" />
 
@@ -87,22 +87,22 @@
             <div class="wb-frmvld">
                 <h1 property="name" id="wb-cont">APIs - Documentation</h1>
                 <p>APIs Documentation:</p>
-                <p><a href="cvp-dataset-en.html">Canada Vigilance (CVP) Dataset</a></p>
-                <p><a href="cvp-documentation-en.html">Canada Vigilance (CVP) API Documentation</a></p>
-                <p><a href="cta-dataset-en.html">Clinical Trials Database (CTA) Dataset</a></p>
-                <p><a href="cta-documentation-en.html">Clinical Trials Database (CTA) API Documentation</a></p>
-                <p><a href="dhpr-dataset-en.html">Drug and Health Products Register (DHPR) Dataset</a></p>
-                <p><a href="dhpr-documentation-en.html">Drug and Health Products Register (DHPR)  API Documentation</a></p>
-                <p><a href="dpd-dataset-en.html">Drug Product Database (DPD) Dataset</a></p>
-                <p><a href="dpd-documentation-en.html">Drug Product Database (DPD) API Documentation</a></p>
-                <p><a href="lnhpd-dataset-en.html">Licenced Naturel Product Database (LNHPD) Dataset</a></p>
-                <p><a href="lnhpd-documentation-en.html">Licenced Naturel Product Database (LNHPD) API Documentation</a></p>
-                <p><a href="mdall-dataset-en.html">Medical Devices Active Licence Listing (MDALL) Dataset</a></p>
-                <p><a href="mdall-documentation-en.html">Medical Devices Active Licence Listing (MDALL) API Documentation</a></p>
-                <p><a href="noc-dataset-en.html">Notice of Compliance Database (NOC) Dataset</a></p>
-                <p><a href="noc-documentation-en.html">Notice of Compliance Database (NOC) API Documentation</a></p>
-                <p><a href="summary-report-dataset-en.html">Summary Report Dataset</a></p>
-                <p><a href="summary-report-documentation-en.html">Summary Report API Documentation</a></p>
+                <p><a href="cvp-dataset-fr.html">Dataset - Base de données en ligne des effets indésirables de Canada Vigilance (BDEI)</a></p>
+                <p><a href="cvp-documentation-fr.html">Guide API - Base de données en ligne des effets indésirables de Canada Vigilance (BDEI)</a></p>
+                <p><a href="cta-dataset-fr.html">Dataset - Base de données des essais cliniques (BDEC)</a></p>
+                <p><a href="cta-documentation-fr.html">Guide API - Base de données des essais cliniques (BDEC)</a></p>
+                <p><a href="dhpr-dataset-fr.html">Dataset - Registre des médicaments et des produits de santé (RMPS)</a></p>
+                <p><a href="dhpr-documentation-fr.html">Guide API - Registre des médicaments et des produits de santé (RMPS)</a></p>
+                <p><a href="dpd-dataset-fr.html">Dataset API - Base de données sur les produits pharmaceutiques (BDPP)</a></p>
+                <p><a href="dpd-documentation-fr.html">Guide API - Base de données sur les produits pharmaceutiques (BDPP)</a></p>
+                <p><a href="lnhpd-dataset-fr.html">Dataset API - Base de donnée de produits de santé naturels homologués (BDPSNH)</a></p>
+                <p><a href="lnhpd-documentation-fr.html">Guide API - Base de donnée de produits de santé naturels homologués (BDPSNH)</a></p>
+                <p><a href="mdall-dataset-fr.html">Dataset - Liste des instruments médicaux homologués en vigueur (MDALL)</a></p>
+                <p><a href="mdall-documentation-fr.html">Guide API - Liste des instruments médicaux homologués en vigueur (MDALL)</a></p>
+                <p><a href="noc-dataset-fr.html">Dataset - Avis de conformité (AC)</a></p>
+                <p><a href="noc-documentation-fr.html">Guide API - Avis de conformité (AC)</a></p>
+                <p><a href="summary-report-dataset-fr.html">Dataset - Rapports sommaires</a></p>
+                <p><a href="summary-report-documentation-fr.html">Guide API - Rapports sommaires</a></p>
             </div>
             <!-- prefooter-en.html-Start-->
             <div id="def-preFooter">
