removed three items from Licence

--- a/APIDocumentation/mdall-documentation-fr.html
+++ b/APIDocumentation/mdall-documentation-fr.html
@@ -317,7 +317,7 @@
                                     <td><strong>licence_type_desc</strong></td>
                                     <td>The licence type description.</td>
                                 </tr>
-                                <tr>
+                                <!--<tr>
                                     <td><strong>noc_location</strong></td>
                                     <td>NEED DESCRIPTION.</td>
                                 </tr>
@@ -328,13 +328,13 @@
                                 <tr>
                                     <td><strong>has_location</strong></td>
                                     <td>NEED DESCRIPTION.</td>
-                                </tr>
+                                </tr>-->
                             </table>
                         </section>
                         <section>
                              <h3 id="a2.3">Exemple de résultat</h3>
-                             <pre class="prettify prettyprint linenums">[{"original_licence_no":1561,"licence_status":"I","application_id":15345,"appl_risk_class":2,"licence_name":"FLOOD PHANTOM","first_licence_status_dt":"1999-02-23","last_refresh_dt":"2013-01-29","end_date":null,"licence_type_cd":"F","company_id":101500,"licence_type_desc":"Device Family","noc_location":null,"sbd_location":null,"has_location":false},
-    {"original_licence_no":67624,"licence_status":"I","application_id":89957,"appl_risk_class":2,"licence_name":"FLOOD SOURCE","first_licence_status_dt":"2005-03-02","last_refresh_dt":"2013-01-29","end_date":null,"licence_type_cd":"F","company_id":117675,"licence_type_desc":"Device Family","noc_location":null,"sbd_location":null,"has_location":false}]</pre>
+                             <pre class="prettify prettyprint linenums">[{"original_licence_no":1561,"licence_status":"I","application_id":15345,"appl_risk_class":2,"licence_name":"FLOOD PHANTOM","first_licence_status_dt":"1999-02-23","last_refresh_dt":"2013-01-29","end_date":null,"licence_type_cd":"F","company_id":101500,"licence_type_desc":"Device Family"},
+    {"original_licence_no":67624,"licence_status":"I","application_id":89957,"appl_risk_class":2,"licence_name":"FLOOD SOURCE","first_licence_status_dt":"2005-03-02","last_refresh_dt":"2013-01-29","end_date":null,"licence_type_cd":"F","company_id":117675,"licence_type_desc":"Device Family"}]</pre>
                         </section>
                         <section>
                              <h3 id="a2.4">Exemple de jQuery</h3> 
