--- a/APIDocumentation/dpd-dataset-fr.html
+++ b/APIDocumentation/dpd-dataset-fr.html
@@ -72,7 +72,7 @@
 	    search: true,
 		lngLinks: [{
 			lang: "fr",
-			href: "dpd-documentation-en.html",
+			href: "dpd-dataset-en.html",
 			text: "English",
 		}],
 		showPreContent: true,
